2000-01-14  Harlan Stenn  <stenn@whimsy.udel.edu>

	* build: Just overwrite the log file each time; sometimes NFS goes
	a little goofy.

	* ntpd/refclock_fg.c: Syntax/punctuation cleanup

2000-01-13  Harlan Stenn  <stenn@whimsy.udel.edu>

	* scripts/ntpsweep: New version
	From: Hans Lambermont <Hans.Lambermont@nl.origin-it.com> 

	* ntpd/refclock_fg.c: New version
	* html/driver37.htm: New version
	From: Dmitry Smirnov <das@online.nsk.su>

2000-01-12  Harlan Stenn  <stenn@whimsy.udel.edu>

	* README.des: Cleanup

2000-01-12  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99

	* html/driver36.htm: Cleanup
	* html/monopt.htm: Ditto
	From: Dave Mills <mills@udel.edu>
	
	* ntpd/ntp_intres.c (ntp_intres): Put "NTP_INTRES running" at a
	higher debug level

2000-01-11  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/refclock_wwv.c: More improvements
	From: Dave Mills <mills@udel.edu>

2000-01-10  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/refclock_wwv.c: Bugfixes/improvements
	From: Dave Mills <mills@udel.edu>

	* configure.in: Get the quoting right on the sys_errlist check.
	From documentation by: Akim Demaille <akim@epita.fr>

2000-01-08  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: <netinet/ip.h> cannot be detected... 
	* ntpd/ntp_io.h: ...but every OS has it 
	* ntpd/refclock_oncore.c: Lint removal 
	* ntpq/ntpq_ops.c: Lint removal 
	* ntpq/refclock_chu.c: chu_major() is not an audio routine (?), lint 
	* libntp/icom.c: AIX doesn't have <sys/termios.h> 
	From: Marc.Brett@westgeo.com

	* ntpd/refclock_chu.c: NetBSD needs sys/ioctl.h
	(chu_debug): NetBSED-specific debug output.
	From: Frederick Bruckman <fb@enteract.com>

2000-01-06  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.98m
	I skipped `l' - it looks like a `1'.
	
	* html/driver7.htm: Doc update
	* html/driver36.htm: Ditto
	* html/audio.htm: Ditto

	* ntpd/refclock_wwv.c: Dvae snuck another fix/change in on me.

	* configure.in: 4.0.98k
